[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.10.2"
aes-gcm = "0.10.3"
base64 = "0.22.1"
bincode = "2.0.1"
dotenvy = "0.15.7"
futures = "0.3.31"
gumbo-lib = { version = "0.1.4", features = ["sessions", "turbo-streams"] }
log = "0.4.26"
oauth2 = "5.0.0"
pretty_env_logger = "0.5.0"
rand = "0.9.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["sync"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
welds = { version = "0.4.11", features = ["postgres", "migrations"] }
#welds = { version = "0.4.11", features = ["postgres", "migrations"] }
yew = { version = "0.21.0", features = ["ssr"] }
